# ethereum-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: INCREMENTAL_INDEXING.md
src/ethereum_mcp/: __init__.py  cli.py  clients.py  config.py  logging.py  models.py  server.py
src/ethereum_mcp/expert/: __init__.py  guidance.py
src/ethereum_mcp/indexer/: __init__.py  chunker.py  client_compiler.py  compiler.py  downloader.py  embedder.py  manifest.py  rust_compiler.py
src/ethereum_mcp/tools/: __init__.py
tests/: __init__.py  conftest.py  test_chunker.py  test_config.py  test_guidance.py  test_incremental.py  test_lean_pq_integration.py  test_lean_spec_chunker.py  test_lean_spec_integration.py  test_lean_spec_server.py  test_manifest.py  test_models.py  test_rust_chunker.py  test_security.py  test_server.py
