[project]
name = "eth-mcp"
version = "0.2.0"
description = "RAG-powered MCP server for Ethereum consensus specs and EIPs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "be.nvy" }
]
keywords = [
    "ethereum",
    "mcp",
    "rag",
    "consensus",
    "eip",
    "search",
    "model-context-protocol",
    "llm",
    "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "fastmcp>=0.4.0",
    "lancedb>=0.6.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/be-nvy/ethereum-mcp"
Documentation = "https://github.com/be-nvy/ethereum-mcp#readme"
Repository = "https://github.com/be-nvy/ethereum-mcp.git"
Issues = "https://github.com/be-nvy/ethereum-mcp/issues"
Changelog = "https://github.com/be-nvy/ethereum-mcp/blob/main/CHANGELOG.md"

[project.optional-dependencies]
clients = [
    # For parsing client source code in multiple languages
    "tree-sitter>=0.20.0",
    "tree-sitter-rust>=0.20.0",  # For reth, lighthouse
    "tree-sitter-go>=0.20.0",   # For geth, prysm, erigon
]
voyage = [
    # For voyage-code-3 API embeddings (best quality)
    "voyageai>=0.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "twine>=4.0.0",
    "build>=1.0.0",
]

[project.scripts]
ethereum-mcp = "ethereum_mcp.cli:main"
eth-mcp = "ethereum_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ethereum_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/ethereum_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
